test_scripts/errors/block_expr_undefined.shm
let x = { undefined_var };
