test_scripts/errors/block_expr_undefined.stderr
 1 | let x = { undefined_var };
               ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
